--- a/conf/DEV.public.conf
+++ b/conf/DEV.public.conf
@@ -10,6 +10,7 @@ stage="DEV"
 identity.webapp.url="https://profile.thegulocal.com"
 identity.api.url="https://idapi.code.dev-theguardian.com"
 identity.production.keys=false
+identity.useStub=false
 guardianDomain=".thegulocal.com"
 support.url="https://support.thegulocal.com"
 contribution.url="https://contribute.thegulocal.com"
