--- a/cloud-formation/cfn.yaml
+++ b/cloud-formation/cfn.yaml
@@ -192,6 +192,9 @@ Resources:
       HealthyThresholdCount: 2
       UnhealthyThresholdCount: 2
       VpcId: !Ref VpcId
+      TargetGroupAttributes:
+      - Key: deregistration_delay.timeout_seconds
+        Value: '30'
     DependsOn:
     - ElasticLoadBalancer
 
