--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "eslint-plugin-react": "^7.7.0",
     "file-loader": "^1.1.11",
     "flow-bin": "^0.71.0",
+    "flow-typed": "^2.4.0",
     "jest": "^22.4.3",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.8.3",
