Add cloudwatch metric for successful payment execution (#92)
* add cloudwatch metric for successful payment execution

* include mock cloudwatch service in testing

* mock cloudwatch for PaypalController in stripte tests

* removing any concept of environment as its not apparent how to determine it at this stage

* add stage to metric definition

* add awareness of mode

* rearrange cloudwatchServices to better fit with application

* simplify cloud watch service

* update cloud formation with put metric data permission

--- a/src/main/resources/cloud-formation.yaml
+++ b/src/main/resources/cloud-formation.yaml
@@ -211,6 +211,14 @@ Resources:
                   [ !Ref EmailSqsQueueCodeArn, !Ref EmailSqsQueueProdArn],
                   [ !Ref EmailSqsQueueCodeArn]
                 ]
+        - PolicyName: CloudWatchMetrics
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Effect: Allow
+                Action:
+                - cloudwatch:PutMetricData
+                Resource: '*'
 
   InstanceProfile:
     Type: AWS::IAM::InstanceProfile
