--- a/conf/DEV.public.conf
+++ b/conf/DEV.public.conf
@@ -10,7 +10,7 @@ stage="DEV"
 identity.webapp.url="https://profile.thegulocal.com"
 identity.api.url="https://idapi.code.dev-theguardian.com"
 identity.production.keys=false
-identity.useStub=true
+identity.useStub=false
 guardianDomain=".thegulocal.com"
 support.url="https://support.thegulocal.com"
 googleAuth.redirectUrl = "https://support.thegulocal.com/oauth2callback"
