--- a/.flowconfig
+++ b/.flowconfig
@@ -7,6 +7,7 @@
 assets
 
 [libs]
+./flow-typed/global
 
 [options]
 module.name_mapper='^containerisableComponents/' -> '<PROJECT_ROOT>/assets/containerisableComponents/'
