--- a/conf/PROD.public.conf
+++ b/conf/PROD.public.conf
@@ -18,15 +18,21 @@ membersDataService.api.url="https://members-data-api.theguardian.com"
 play.filters.headers.contentSecurityPolicy = "default-src 'self' polyfill.guim.co.uk www.paypalobjects.com www.paypal.com www.sandbox.paypal.com js.stripe.com pasteup.guim.co.uk ophan.theguardian.com j.ophan.co.uk media.guim.co.uk www.google-analytics.com www.googletagmanager.com tagmanager.google.com www.googleadservices.com googleads.g.doubleclick.net www.google.com www.google.co.uk optimize.google.com static.ads-twitter.com bat.bing.com bid.g.doubleclick.net t.co analytics.twitter.com stats.g.doubleclick.net www.youtube.com connect.facebook.net www.facebook.com consumer.krxd.net cdn.krxd.net beacon.krxd.net secure.adnxs.com checkout.stripe.com fonts.googleapis.com ssl.gstatic.com www.gstatic.com fonts.gstatic.com sentry.io data: wss: 'unsafe-inline' q.stripe.com payment.guardianapis.com"
 
 // ---------------------------Feature switches---------------------------
-// -----------------------------24/7 Support-----------------------------
 // To disable a feature change the value from On to Off and redeploy
 // the app using Riff Raff
-// -----------------------------24/7 Support-----------------------------
+
 switches {
   //Payment methods for one-off contributions
   oneOff {
     stripe=On
-    payPal=On
+    // |----------------------------------|
+    // |-----------24/7 Support-----------|
+    // |----------------------------------|
+    payPal=On     // Comment this line
+    //payPal=Off  // Uncomment this line
+    // |----------------------------------|
+    // |-----------24/7 Support-----------|
+    // |----------------------------------|
   }
   //Payment methods for recurring contributions
   recurring {
