Add the 24-7 instructions into the CODE conf

--- a/conf/CODE.public.conf
+++ b/conf/CODE.public.conf
@@ -26,7 +26,14 @@ switches {
   //Payment methods for one-off contributions
   oneOff {
     stripe=On
-    payPal=On
+    // |----------------------------------|
+    // |-----------24/7 Support-----------|
+    // |----------------------------------|
+    payPal=On     // Comment this line
+    //payPal=Off  // Uncomment this line
+    // |----------------------------------|
+    // |-----------24/7 Support-----------|
+    // |----------------------------------|
   }
   //Payment methods for recurring contributions
   recurring {
