--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -30,13 +30,37 @@ touchpoint.backend.environments {
       }
       contribution {
         monthly {
-          productRatePlanId=""
-          productRatePlanChargeId=""
+          productRatePlanId="2c92c0f85a6b134e015a7fcd9f0c7855"
+          productRatePlanChargeId="2c92c0f85a6b1352015a7fcf35ab397c"
         }
         annual {
-          productRatePlanId=""
-          productRatePlanChargeId=""
+          productRatePlanId="2c92c0f85e2d19af015e3896e824092c"
+          productRatePlanChargeId="2c92c0f85e2d19af015e3896e84d092e"
         }
+      }
+    }
+  }
+  UAT {
+    zuora.contribution {
+      monthly {
+        productRatePlanId="2c92c0f85ab269be015acd9d014549b7"
+        productRatePlanChargeId="2c92c0f85ab2696b015acd9eeb6150ab"
+      }
+      annual {
+        productRatePlanId="2c92c0f95e1d5c9c015e38f8c87d19a1"
+        productRatePlanChargeId="2c92c0f95e1d5c9c015e38f8c8ac19a3"
+      }
+    }
+  }
+  PROD {
+    zuora.contribution {
+      monthly {
+        productRatePlanId="2c92a0fc5aacfadd015ad24db4ff5e97"
+        productRatePlanChargeId="2c92a0fc5aacfadd015ad250bf2c6d38"
+      }
+      annual {
+        productRatePlanId="2c92a0fc5e1dc084015e37f58c200eea"
+        productRatePlanChargeId="2c92a0fc5e1dc084015e37f58c7b0f34"
       }
     }
   }
