Zuora calls for digital pack

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -38,6 +38,35 @@ touchpoint.backend.environments {
           productRatePlanChargeId="2c92c0f85e2d19af015e3896e84d092e"
         }
       }
+      digitalpack={
+        monthly="2c92c0f84bbfec8b014bc655f4852d9d"
+        quarterly="2c92c0f84bbfec58014bc6a2d43a1f5b"
+        annual="2c92c0f94bbffaaa014bc6a4212e205b"
+      }
+    }
+  }
+  UAT {
+    zuora.contribution {
+      monthly {
+        productRatePlanId="2c92c0f85ab269be015acd9d014549b7"
+        productRatePlanChargeId="2c92c0f85ab2696b015acd9eeb6150ab"
+      }
+      annual {
+        productRatePlanId="2c92c0f95e1d5c9c015e38f8c87d19a1"
+        productRatePlanChargeId="2c92c0f95e1d5c9c015e38f8c8ac19a3"
+      }
+    }
+  }
+  PROD {
+    zuora.contribution {
+      monthly {
+        productRatePlanId="2c92a0fc5aacfadd015ad24db4ff5e97"
+        productRatePlanChargeId="2c92a0fc5aacfadd015ad250bf2c6d38"
+      }
+      annual {
+        productRatePlanId="2c92a0fc5e1dc084015e37f58c200eea"
+        productRatePlanChargeId="2c92a0fc5e1dc084015e37f58c7b0f34"
+      }
     }
   }
   UAT {
