--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -46,56 +46,68 @@ touchpoint.backend.environments {
     }
   }
   UAT {
-    zuora.contribution {
-      monthly {
-        productRatePlanId="2c92c0f85ab269be015acd9d014549b7"
-        productRatePlanChargeId="2c92c0f85ab2696b015acd9eeb6150ab"
+    zuora {
+      contribution {
+        monthly {
+          productRatePlanId = "2c92c0f85ab269be015acd9d014549b7"
+          productRatePlanChargeId = "2c92c0f85ab2696b015acd9eeb6150ab"
+        }
+        annual {
+          productRatePlanId = "2c92c0f95e1d5c9c015e38f8c87d19a1"
+          productRatePlanChargeId = "2c92c0f95e1d5c9c015e38f8c8ac19a3"
+        }
       }
-      annual {
-        productRatePlanId="2c92c0f95e1d5c9c015e38f8c87d19a1"
-        productRatePlanChargeId="2c92c0f95e1d5c9c015e38f8c8ac19a3"
-      }
-    }
-  }
-  PROD {
-    zuora.contribution {
-      monthly {
-        productRatePlanId="2c92a0fc5aacfadd015ad24db4ff5e97"
-        productRatePlanChargeId="2c92a0fc5aacfadd015ad250bf2c6d38"
-      }
-      annual {
-        productRatePlanId="2c92a0fc5e1dc084015e37f58c200eea"
-        productRatePlanChargeId="2c92a0fc5e1dc084015e37f58c7b0f34"
-      }
-    }
-  }
-  UAT {
-    zuora.contribution {
-      monthly {
-        productRatePlanId="2c92c0f85ab269be015acd9d014549b7"
-        productRatePlanChargeId="2c92c0f85ab2696b015acd9eeb6150ab"
-      }
-      annual {
-        productRatePlanId="2c92c0f95e1d5c9c015e38f8c87d19a1"
-        productRatePlanChargeId="2c92c0f95e1d5c9c015e38f8c8ac19a3"
+      digitalpack {
+        monthly="2c92c0f94f2acf73014f2c908f671591"
+        quarterly="2c92c0f94f2acf76014f2c92b5791f0f"
+        annual="2c92c0f84f2ac59d014f2c94aea9199e"
       }
     }
   }
   PROD {
-    zuora.contribution {
-      monthly {
-        productRatePlanId="2c92a0fc5aacfadd015ad24db4ff5e97"
-        productRatePlanChargeId="2c92a0fc5aacfadd015ad250bf2c6d38"
+    zuora{
+      contribution {
+        monthly {
+          productRatePlanId="2c92a0fc5aacfadd015ad24db4ff5e97"
+          productRatePlanChargeId="2c92a0fc5aacfadd015ad250bf2c6d38"
+        }
+        annual {
+          productRatePlanId="2c92a0fc5e1dc084015e37f58c200eea"
+          productRatePlanChargeId="2c92a0fc5e1dc084015e37f58c7b0f34"
+        }
       }
-      annual {
-        productRatePlanId="2c92a0fc5e1dc084015e37f58c200eea"
-        productRatePlanChargeId="2c92a0fc5e1dc084015e37f58c7b0f34"
+      digitalpack {
+        monthly="2c92a0fb4edd70c8014edeaa4eae220a"
+        quarterly="2c92a0fb4edd70c8014edeaa4e8521fe"
+        annual="2c92a0fb4edd70c8014edeaa4e972204"
       }
     }
   }
 }
 
 email {
+  contribution {
+    thankYou {
+      queueName=contributions-thanks
+      dataExtensionName=regular-contribution-thank-you
+    }
+    failed {
+      queueName=contributions-thanks
+      dataExtensionName=contribution-failed
+    }
+  }
+  digitalpack {
+    thankYou {
+      queueName=contributions-thanks
+      dataExtensionName=digipack
+    }
+    failed {
+      queueName=contributions-thanks
+      dataExtensionName=contribution-failed
+    }
+  }
+
+  //Old schema
   thankYou {
     queueName=contributions-thanks
     dataExtensionName=regular-contribution-thank-you
