--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "babel-eslint": "^8.2.3",
     "babel-jest": "^23.0.1",
     "babel-loader": "^7.1.4",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.23.0",
     "css-loader": "^0.28.11",
@@ -98,6 +99,7 @@
     "postcss-pxtorem": "^4.0.1",
     "preact": "^8.2.9",
     "preact-compat": "^3.18.0",
+    "react-loadable": "^5.4.0",
     "redux-mock-store": "^1.5.1",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.3",
