--- a/conf/DEV.public.conf
+++ b/conf/DEV.public.conf
@@ -35,5 +35,14 @@ switches {
   }
   //Google Optimize tags
   optimize=Off
+
+  abtests = [
+    {
+      name=new-payment-flow
+      description=Redesign of the payment flow UI
+      segment=Perc0A
+      state=On
+    }
+  ]
 }
 
