--- a/conf/PROD.public.conf
+++ b/conf/PROD.public.conf
@@ -42,5 +42,14 @@ switches {
   }
   //Google Optimize tags
   optimize=On
+
+  abtests = [
+    {
+      name=new-payment-flow
+      description=Redesign of the payment flow UI
+      segment=Perc0A
+      state=On
+    }
+  ]
 }
 
