Segment name in conf

--- a/conf/DEV.public.conf
+++ b/conf/DEV.public.conf
@@ -40,7 +40,7 @@ switches {
     {
       name=newPaymentFlow
       description=Redesign of the payment flow UI
-      segment=Perc0A
+      segment=Perc0
       state=On
     }
   ]
