--- a/conf/PROD.public.conf
+++ b/conf/PROD.public.conf
@@ -47,7 +47,7 @@ switches {
     {
       name=newPaymentFlow
       description=Redesign of the payment flow UI
-      segment=Perc0A
+      segment=Perc0
       state=On
     }
   ]
