Add form validation

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ assets/images/inline-svgs/*.svg
 /public/webpack/
 /public/images/
 /public/**/*.js
+!/public/assets-new-ui/scripts.js
 /public/**/*.js.map
 /assets/javascripts/lib/bower-components/
 .yarnclean
