Wrap switches in settings

--- a/conf/CODE.public.conf
+++ b/conf/CODE.public.conf
@@ -52,6 +52,11 @@ switches {
       state=On
     }
   ]
-  
+
   internationalSubscribePages=On
+}
+
+adminSettings.s3 {
+  bucket="support-frontend-admin-console"
+  key= "settings.json"
 }
