--- a/conf/DEV.public.conf
+++ b/conf/DEV.public.conf
@@ -22,6 +22,7 @@ play.filters.headers.contentSecurityPolicy = "default-src 'self' polyfill.guim.c
 // To override a value for local development change it in your private conf file
 // /etc/gu/support-frontend.private.conf and that value will be used instead.
 switches {
+
   //Payment methods for one-off contributions
   oneOff {
     stripe=On
@@ -44,7 +45,8 @@ switches {
       state=On
     }
   ]
-  
+
   internationalSubscribePages=On
 }
 
+adminSettings.local.path="~/.gu/support-frontend-admin-console/settings.json"
