--- a/conf/PROD.public.conf
+++ b/conf/PROD.public.conf
@@ -55,3 +55,7 @@ switches {
   internationalSubscribePages=On
 }
 
+adminSettings.s3 {
+  bucket="support-frontend-admin-console"
+  key= "settings.json"
+}
