Fetch settings as a string from a local file

--- a/conf/CODE.public.conf
+++ b/conf/CODE.public.conf
@@ -56,7 +56,7 @@ switches {
   internationalSubscribePages=On
 }
 
-adminSettings.s3 {
+adminSettingsSource.s3 {
   bucket="support-frontend-admin-console"
   key= "settings.json"
 }
