--- a/conf/DEV.public.conf
+++ b/conf/DEV.public.conf
@@ -49,4 +49,4 @@ switches {
   internationalSubscribePages=On
 }
 
-adminSettings.local.path="~/.gu/support-frontend-admin-console/settings.json"
+adminSettingsSource.local.path="~/.gu/support-frontend-admin-console/settings.json"
