Update title tag and meta description

--- a/conf/strings.conf
+++ b/conf/strings.conf
@@ -1,3 +1,4 @@
 supportLanding.description="Help us deliver the independent journalism the world needs. Support the Guardian by making a contribution or getting a subscription."
 contributionsLanding.description="Help us deliver the independent journalism the world needs. Support the Guardian by making a contribution."
 subscriptionsLanding.description="Help us deliver the independent journalism the world needs. Support the Guardian by getting a subscription."
+digitalPackLanding.description="Subscribe to the Guardian Digital Pack and read the Guardian ad-free on all of your devices. The Digital Pack includes the Premium App and Daily Edition iPad app."
