--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "url": "https://github.com/guardian/support-frontend/issues"
   },
   "dependencies": {
+    "cssnano": "^4.1.4",
     "ophan-tracker-js": "^1.3.13",
     "raven-js": "^3.26.1",
     "react-redux": "^5.0.7",
@@ -63,7 +64,9 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "seedrandom": "^2.4.3",
-    "uuid": "^3.2.1",
+    "uuid": "^3.2.1"
+  },
+  "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
@@ -77,7 +80,7 @@
     "babel-eslint": "^9.0.0",
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.0",
-    "css-loader": "^0.28.11",
+    "css-loader": "^1.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "^12.1.0",
