enable devtools in DEV
The react dev tools allow you to view your app's DOM as components, allowing you to see the props etc.

Really useful to help determine what component is responsible for what part of the page.

--- a/.babelrc
+++ b/.babelrc
@@ -11,6 +11,7 @@
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-syntax-dynamic-import",
     ["@babel/plugin-proposal-object-rest-spread", { "useBuiltIns": true }],
+    "babel-plugin-add-react-displayname"
   ],
   "env": {
     "test": {
