--- a/.babelrc
+++ b/.babelrc
@@ -15,7 +15,8 @@
   ],
   "env": {
     "test": {
-      "presets": ["@babel/preset-env"]
+      "presets": ["@babel/preset-env"],
+      "plugins": ["dynamic-import-node"]
     }
   }
 }
