--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.0",
     "babel-plugin-add-react-displayname": "^0.0.5",
+    "babel-plugin-dynamic-import-node": "^2.2.0",
     "css-loader": "^1.0.0",
     "eslint": "^5.8.0",
     "eslint-config-airbnb": "^16.1.0",
