Re-comment line

--- a/conf/DEV.public.conf
+++ b/conf/DEV.public.conf
@@ -25,4 +25,4 @@ settingsSource.s3 {
 }
 
 # Uncomment the line below if you want to override admin settings locally
-settingsSource.local.path="~/.gu/support-frontend-admin-console/settings.json"
+# settingsSource.local.path="~/.gu/support-frontend-admin-console/settings.json"
